gccida/g2/emit_libcall_block
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3330:4: error: expected ';' after expression
rtx reg_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3330:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // r15 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3331:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3331:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3332:4: error: expected ';' after expression
rtx i; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3332:5: error: use of undeclared identifier 'i'
rtx i; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3335:4: error: expected ';' after expression
rtx v14; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3335:5: error: use of undeclared identifier 'v14'
rtx v14; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3337:4: error: expected ';' after expression
rtx v16; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3337:5: error: use of undeclared identifier 'v16'
rtx v16; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3342:4: error: expected ';' after expression
rtx last_insn; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3342:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3344:4: error: expected ';' after expression
rtx v23; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3344:5: error: use of undeclared identifier 'v23'
rtx v23; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3346:4: error: expected ';' after expression
rtx v25; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3346:5: error: use of undeclared identifier 'v25'
rtx v25; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3351:4: error: expected ';' after expression
rtx v30; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3351:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rbp 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3341:9: note: 'v20' declared here
__int64 v20; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/optabs.c:3352:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_libcall_block/src/obj/optabs.o] Error 1
